Fixed spacing and changed colors

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -8,6 +8,7 @@ body {
 
 .navContainer {
   display: flex;
+  background-color: black;
 }
 
 .logo {
@@ -19,6 +20,7 @@ body {
 .siteName {
   margin-top: 15px;
   font-size: 3rem;
+  color: white;
 }
 
 .view-property {
